--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Redirigir a Telegram</title>
+
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+
+fbq('init', '1233279682109106');
+fbq('track', 'PageView');
+</script>
+<!-- End Meta Pixel Code -->
+
 <style>
   body {
     margin: 0;
@@ -60,31 +77,49 @@
   }
 </style>
 </head>
+
 <body>
+
+<!-- Meta Pixel Noscript -->
+<noscript>
+<img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1233279682109106&ev=PageView&noscript=1"/>
+</noscript>
 
 <div class="banner">
   <div class="logo-circle">
     <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo">
   </div>
   <p style="font-size: 18px; margin-bottom: 10px;">Trabajo en casa</p>
-  <a class="btn-telegram" href="https://t.me/+yReOJ3VlKCxlMjli" target="_blank">Abrir Telegram</a>
+
+  <a class="btn-telegram"
+     href="https://t.me/+yReOJ3VlKCxlMjli"
+     target="_blank"
+     onclick="fbq('track', 'Lead', {source: 'telegram_button'});">
+     Abrir Telegram
+  </a>
 </div>
 
 <script>
-  // Определение user agent для iOS
+  // Определение iOS
   var isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
 
   if (!isIOS) {
-    // Android редирект оставляем как есть
+
+    // Android intent
     setTimeout(function () {
-      window.location.href = "intent://t.me/+yReOJ3VlKCxlMjli#Intent;scheme=https;package=org.telegram.messenger;end";
+      fbq('track', 'Lead', {source: 'auto_redirect_intent'});
+      window.location.href =
+        "intent://t.me/+yReOJ3VlKCxlMjli#Intent;scheme=https;package=org.telegram.messenger;end";
     }, 500);
 
+    // Fallback на web
     setTimeout(function () {
+      fbq('track', 'Lead', {source: 'auto_redirect_web'});
       window.location.href = "https://t.me/+yReOJ3VlKCxlMjli";
     }, 1800);
+
   }
-  // На iOS пользователь кликает вручную на кнопку, без авто-редиректа
 </script>
 
 </body>
