--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="facebook-domain-verification" content="nijjlfatlwfo74umni0epuudaf6j2q" />
-<title>Redirigir a Telegram</title>
+<title>Abrir Telegram</title>
 
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);
+t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-
 fbq('init', '909063091813143');
 fbq('track', 'PageView');
 </script>
@@ -27,19 +24,22 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
   background: #f0f0f0;
 }
+
 .banner {
-  background: white;
+  background: #ffffff;
   padding: 40px 20px;
   border-radius: 20px;
   text-align: center;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  max-width: 320px;
+  width: 90%;
 }
+
 .logo-circle {
   width: 80px;
   height: 80px;
@@ -50,8 +50,80 @@ body {
   align-items: center;
   margin: 0 auto 20px;
 }
-.logo-circle img {
-  width: 50px;
-  height: 50px;
+
+.logo-circle svg {
+  width: 40px;
+  height: 40px;
+  fill: #ffffff;
 }
+
 .btn-telegram {
+  display: inline-block;
+  background: #0088cc;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 15px 40px;
+  border-radius: 30px;
+  text-decoration: none;
+  animation: pulse 1.5s infinite;
+  margin-top: 20px;
+  transition: transform 0.2s;
+}
+
+.btn-telegram:hover {
+  transform: scale(1.05);
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); box-shadow: 0 0 0 rgba(0, 136, 204, 0.7);}
+  50% { transform: scale(1.05); box-shadow: 0 0 20px rgba(0, 136, 204, 0.4);}
+  100% { transform: scale(1); box-shadow: 0 0 0 rgba(0, 136, 204, 0.7);}
+}
+</style>
+</head>
+
+<body>
+<div class="banner">
+  <div class="logo-circle">
+    <!-- Белый самолетик Telegram -->
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 240 240">
+      <path d="M120 0C53.73 0 0 53.73 0 120s53.73 120 120 120 120-53.73 120-120S186.27 0 120 0zm56.73 84.11l-19.58 92.28c-1.49 6.71-5.42 8.37-11.02 5.21l-30.46-22.46-14.69 14.17c-1.63 1.63-3 3-6.12 3l2.18-30.83 56.15-50.71c2.44-2.18-0.53-3.37-3.78-1.19l-69.37 43.65-29.88-9.33c-6.49-2.03-6.61-6.49 1.36-9.61l116.41-44.88c5.37-2.03 10.07 1.36 8.27 9.07z"/>
+    </svg>
+  </div>
+
+  <p style="font-size: 18px; margin-bottom: 20px;">Abrir en Telegram</p>
+
+  <a class="btn-telegram"
+     href="https://t.me/+yReOJ3VlKCxlMjli"
+     target="_blank"
+     onclick="fbq('track','Lead',{source:'telegram_button'});">
+     Abrir Telegram
+  </a>
+</div>
+
+<script>
+var isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
+
+if (!isIOS) {
+  // Android: пробуем intent
+  setTimeout(function () {
+    fbq('track', 'Lead', {source: 'auto_intent'});
+    setTimeout(function () {
+      window.location.href = "intent://t.me/+yReOJ3VlKCxlMjli#Intent;scheme=https;package=org.telegram.messenger;end";
+    }, 200);
+  }, 500);
+
+  // Фолбэк: если Telegram не установлен, возвращаем на эту же страницу
+  setTimeout(function () {
+    fbq('track', 'Lead', {source: 'auto_fallback'});
+    setTimeout(function () {
+      window.location.href = window.location.href; // просто перезагружаем страницу с кнопкой
+    }, 1800);
+  }, 1800);
+}
+
+// iOS: пользователь нажимает кнопку сам
+</script>
+</body>
+</html>
