--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Meta domain verification -->
+<meta name="facebook-domain-verification" content="v79hmb24u25yf53hlk45s8ut28meho" />
+
 <title>Abrir Telegram</title>
 
 <!-- Meta Pixel Code -->
