--- a/index.html
+++ b/index.html
@@ -2,116 +2,106 @@
 <html lang="es">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<!-- Meta domain verification -->
-<meta name="facebook-domain-verification" content="v79hmb24u25yf53hlk45s8ut28meho" />
-
-<title>Abrir Telegram</title>
-
-<!-- Meta Pixel Code -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);
-t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
+  // Facebook Pixel
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '909063091813143');
+  fbq('track', 'PageView');
 
-fbq('init', '909063091813143');
-fbq('track', 'PageView');
-
-// Добавляем ViewContent сразу при заходе на страницу
-fbq('track', 'ViewContent');
+  function trackAndRedirect() {
+    fbq('track', 'ViewContent');
+    // Плавная анимация лоадера перед редиректом
+    const loader = document.getElementById('loader');
+    loader.classList.add('fade-out');
+    setTimeout(() => {
+        window.location.href = 'https://t.me/WorkQuarrys';
+    }, 1500);
+  }
 </script>
-<!-- End Meta Pixel Code -->
 
 <style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background: #f0f0f0;
+:root{
+  --bg:#0b0f17;
+  --accent:#21d4fd;
+  --accent2:#b721ff;
+  --text:#e6efff;
+  --shadow: 0 10px 30px rgba(0,0,0,.35), inset 0 0 0 1px rgba(255,255,255,.04);
 }
 
-.banner {
-  background: #ffffff;
-  padding: 40px 20px;
-  border-radius: 20px;
-  text-align: center;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-  max-width: 320px;
-  width: 90%;
+*{box-sizing:border-box;}
+html,body{height:100%; margin:0; font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif; background: radial-gradient(1200px 600px at 70% -10%, rgba(33,212,253,.25), transparent 60%), radial-gradient(900px 600px at -10% 110%, rgba(183,33,255,.25), transparent 55%), var(--bg); color:var(--text); display:flex; justify-content:center; align-items:center;}
+
+#loader{
+  text-align:center; padding:28px; border-radius:24px;
+  background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
+  box-shadow:var(--shadow);
+  border:1px solid rgba(255,255,255,.08);
+  backdrop-filter: blur(8px);
+  animation: fadeIn 1s ease forwards;
 }
 
-.logo-circle {
-  width: 80px;
-  height: 80px;
-  background: #0088cc;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto 20px;
+#loader.fade-out{opacity:0; transition:opacity 0.5s ease;}
+
+@keyframes fadeIn{0%{opacity:0}100%{opacity:1}}
+
+.logo{
+  width:60px; height:60px; margin:0 auto 16px;
 }
 
-.logo-circle svg {
-  width: 40px;
-  height: 40px;
-  fill: #ffffff;
+h1{
+  font-size:22px; font-weight:700; margin-bottom:12px;
 }
 
-.btn-telegram {
-  display: inline-block;
-  background: #0088cc;
-  color: white;
-  font-size: 20px;
-  font-weight: bold;
-  padding: 15px 40px;
-  border-radius: 30px;
-  text-decoration: none;
+p{
+  font-size:16px; margin-bottom:24px;
+}
+
+button{
+  background: linear-gradient(90deg, var(--accent), var(--accent2));
+  border:none; border-radius:12px;
+  color:#fff; font-size:16px;
+  padding:14px 28px;
+  cursor:pointer;
+  transition:0.3s;
   animation: pulse 1.5s infinite;
-  margin-top: 20px;
-  transition: transform 0.2s;
 }
 
-.btn-telegram:hover {
-  transform: scale(1.05);
+button:hover{opacity:0.9;}
+
+@keyframes pulse{
+  0%{transform: scale(1)}
+  50%{transform: scale(1.05)}
+  100%{transform: scale(1)}
 }
 
-@keyframes pulse {
-  0% { transform: scale(1); box-shadow: 0 0 0 rgba(0, 136, 204, 0.7);}
-  50% { transform: scale(1.05); box-shadow: 0 0 20px rgba(0, 136, 204, 0.4);}
-  100% { transform: scale(1); box-shadow: 0 0 0 rgba(0, 136, 204, 0.7);}
-}
 </style>
 </head>
+<body onload="trackAndRedirect()">
 
-<body>
-<div class="banner">
-  <div class="logo-circle">
-    <!-- Белый самолетик Telegram -->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 240 240">
-      <path d="M120 0C53.73 0 0 53.73 0 120s53.73 120 120 120 120-53.73 120-120S186.27 0 120 0zm56.73 84.11l-19.58 92.28c-1.49 6.71-5.42 8.37-11.02 5.21l-30.46-22.46-14.69 14.17c-1.63 1.63-3 3-6.12 3l2.18-30.83 56.15-50.71c2.44-2.18-0.53-3.37-3.78-1.19l-69.37 43.65-29.88-9.33c-6.49-2.03-6.61-6.49 1.36-9.61l116.41-44.88c5.37-2.03 10.07 1.36 8.27 9.07z"/>
+<div id="loader">
+  <!-- Telegram logo -->
+  <div class="logo">
+    <svg viewBox="0 0 240 240" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <circle cx="120" cy="120" r="120" fill="#21d4fd"/>
+      <path d="M50 120L190 90L160 120L190 150L50 120Z" fill="white"/>
     </svg>
   </div>
 
-  <p style="font-size: 18px; margin-bottom: 20px;">Abrir en Telegram</p>
+  <h1>Trabajo desde casa</h1>
+  <p>Gana desde 1500 realizando tareas simples. Para comenzar, haz clic en el botón o espera a ser redirigido automáticamente al canal de Telegram <strong>WorkQuarrys</strong>.</p>
 
-  <a class="btn-telegram"
-     href="https://t.me/WorkQuarrys"
-     target="_blank"
-     onclick="fbq('track','Lead',{source:'telegram_button'});">
-     Abrir Telegram
-  </a>
+  <button onclick="window.location.href='https://t.me/WorkQuarrys'">
+    ¡Ir al canal de Telegram ahora!
+  </button>
 </div>
 
-<script>
-// iOS/Android: пользователь нажимает кнопку сам
-</script>
 </body>
 </html>
